ready style catalog/form

--- a/source/sass/_variables.scss
+++ b/source/sass/_variables.scss
@@ -3,11 +3,13 @@ $background-button-green-light: #5eaa2f;
 $action-background-color: #72b74a;
 $background-lightgray: #f2f2f2;
 $background-white: #ffffff;
+$background-hover-button-gray: #ebebeb;
 // header (для себя) TODO
 $line-menu-gray: #e6e6e6;
 $line-dark-gray: #d9d9d9;
 $line-example-gray: #cfcfcf;
 $line-toggle-gray: #cdcdcd;
+$line-catalog-gray: #ededed;
 
 $text-black: #111111;
 $text-white: #ffffff;
