main page ready

--- a/source/sass/_variables.scss
+++ b/source/sass/_variables.scss
@@ -1,17 +1,26 @@
 $background-button-green: #68b738;
 $background-button-green-light: #5eaa2f;
 $action-background-color: #72b74a;
+$background-color-header: #64a83b;
+$background-element-green: #68b738;
 $background-lightgray: #f2f2f2;
 $background-white: #ffffff;
 $background-hover-button-gray: #ebebeb;
-// header (для себя) TODO
+$background-togle-gray: #dcdcdc;
+
 $line-menu-gray: #e6e6e6;
 $line-dark-gray: #d9d9d9;
 $line-example-gray: #cfcfcf;
 $line-toggle-gray: #cdcdcd;
+$line-toggle-gtay-2: #bababa;
 $line-catalog-gray: #ededed;
 
 $text-black: #111111;
+$text-black-tablet: #222222;
 $text-white: #ffffff;
 $text-darkbrown: #444444;
 $text-white-active: rgba(255, 255, 255, 0.3);
+
+$tablet-width: 768px;
+$desktop-width: 1300px;
+$mobile-width-only: 767px;
