--- a/source/sass/blocks/_cat-action.scss
+++ b/source/sass/blocks/_cat-action.scss
@@ -14,6 +14,13 @@
   margin-bottom: 22px;
 }
 
+.cat-action__wrapper {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .cat-action__background {
   position: absolute;
   top: 0;
@@ -57,13 +64,128 @@
   text-transform: uppercase;
 }
 
-.cat-action__image {
-  display: block;
+.cat-action__image-block {
   width: 100%;
   height: auto;
   margin-bottom: 3px;
 }
 
+.cat-action__image {
+  display: block;
+  width: 100%;
+  height: auto;
+
+  &--tablet,
+  &--desktop {
+    display: none;
+  }
+}
+
 .cat-action__link {
   width: 100%;
+  order: 1;
+}
+
+@media (min-width: $tablet-width) {
+  .cat-action {
+    width: $tablet-width;
+    padding: 0 30px;
+    padding-top: 22px;
+    margin-bottom: 0;
+  }
+
+  .cat-action__wrapper {
+    padding: 0 90px;
+    padding-top: 8px;
+    align-items: flex-start;
+  }
+
+  .cat-action__background {
+    display: none;
+  }
+
+  .cat-action__link {
+    order: 0;
+
+    width: auto;
+    // может быть применимо ко всем
+    padding: 15px 26px;
+    padding-right: 28px;
+    padding-top: 17px;
+    font-size: 20px;
+    line-height: 20px;
+  }
+
+  .cat-action__title {
+    margin-bottom: 42px;
+
+    font-size: 60px;
+    line-height: 60px;
+    font-weight: 400;
+    color: $text-black;
+    text-align: left;
+  }
+
+  .cat-action__description {
+    margin-bottom: 48px;
+
+    font-size: 20px;
+    line-height: 20px;
+    font-weight: 400;
+    color: $text-black;
+    text-align: left;
+  }
+
+  .cat-action__image-block {
+    position: relative;
+    z-index: -1;
+    margin: 0 -90px;
+    margin-top: -80px;
+    width: calc(100% + 180px);
+  }
+
+  .cat-action__image {
+    display: none;
+
+    &--tablet {
+      display: block;
+    }
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .cat-action {
+    width: $desktop-width;
+    padding: 0 40px;
+    padding-top: 80px;
+    padding-bottom: 188px;
+    margin-bottom: 80px;
+  }
+
+  .cat-action__wrapper {
+    width: 725px;
+    padding: 0 80px;
+  }
+
+  .cat-action__description {
+    margin-bottom: 53px;
+  }
+
+  .cat-action__image-block {
+    margin: 0;
+    width: auto;
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translateX(-158px);
+  }
+
+  .cat-action__image {
+    display: block;
+
+    &--tablet,
+    &--mobile {
+      display: none;
+    }
+  }
 }
