--- a/source/sass/blocks/_contacts.scss
+++ b/source/sass/blocks/_contacts.scss
@@ -50,3 +50,81 @@
   background: url("../img/map-pin.png") no-repeat;
   background-size: 62px;
 }
+
+@media (min-width: $tablet-width) {
+  .contacts {
+    width: $tablet-width;
+    margin: 0 auto;
+  }
+
+  .contacts__wrapper-text {
+    padding: 65px 72px;
+    padding-bottom: 56px;
+    margin: 0;
+  }
+
+  .contacts__label {
+    font-size: 20px;
+    line-height: 25px;
+  }
+
+  .contacts__address {
+    margin: 0;
+    font-size: 16px;
+    text-align: right;
+  }
+
+  .contacts__city {
+    font: inherit;
+    margin-top: 20px;
+    display: block;
+  }
+
+  .contacts__map {
+    height: 396px;
+    background: url("../img/bg-map-tablet@1x.png") 0 -4px;
+  }
+
+  .contacts__pin {
+    width: 110px;
+    height: 110px;
+    left: 322px;
+    top: 146px;
+    background: url("../img/map-pin.png") no-repeat;
+    background-size: 124px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .contacts {
+    position: relative;
+    width: $desktop-width;
+    margin: 0 auto;
+  }
+
+  .contacts__wrapper-text {
+    position: absolute;
+    background: $background-white;
+    top: 95px;
+    left: 110px;
+    padding: 63px 76px;
+    padding-bottom: 58px;
+    padding-right: 90px;
+    width: 570px;
+    z-index: 10;
+  }
+
+  .contacts__address {
+    text-align: left;
+  }
+
+  .contacts__map {
+    height: 400px;
+    background: url("../img/bg-map-desktop@1x.png") 0 0;
+  }
+
+  .contacts__pin {
+    left: 998px;
+    top: 150px;
+  }
+}
