--- a/source/sass/blocks/_main-nav.scss
+++ b/source/sass/blocks/_main-nav.scss
@@ -20,7 +20,12 @@
   font-size: 0;
   line-height: 0;
 
-  border: 1px dashed tomato;
+  // border: 1px dashed tomato;
+}
+
+.main-nav__toggle-close {
+  width: 18px;
+  height: 18px;
 }
 
 .main-nav__list {
@@ -75,5 +80,68 @@
   &:focus,
   &:active {
     opacity: 1;
+  }
+}
+
+
+@media (min-width: $tablet-width) {
+  .main-nav {
+    justify-content: flex-end;
+  }
+
+  .main-nav__toggle {
+    display: none;
+  }
+
+  .main-nav__list {
+    flex-direction: row;
+    justify-content: flex-end;
+    flex-wrap: wrap;
+    margin: 0 -18px;
+    padding-top: 10px;
+    padding-bottom: 6px;
+  }
+
+  .main-nav__item {
+    width: auto;
+    margin: 0 18px;
+    border: 0;
+  }
+
+  .main-nav__link {
+    width: auto;
+    padding: 10px 0;
+
+    font-size: 18px;
+    line-height: 25px;
+    font-weight: 400;
+    color: $text-black-tablet;
+  }
+
+  .main-nav__link--active::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    left: 0;
+    bottom: 0;
+    background-color: $background-element-green;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .main-nav__list {
+    width: 570px;
+    max-width: inherit;
+    padding: 13px 0;
+  }
+
+  .main-nav__list--page-main .main-nav__link {
+    font-size: 20px;
+    color: $text-white;
+  }
+
+  .main-nav__list--page-main .main-nav__link--active::after {
+    background-color: $background-white;
   }
 }
