--- a/source/sass/blocks/_social.scss
+++ b/source/sass/blocks/_social.scss
@@ -27,8 +27,34 @@
 }
 
 .social__icon {
-  width: auto;
-  height: auto;
   max-width: 100%;
   max-height: 100%;
+
+  &--tablet {
+    display: none;
+  }
+}
+
+
+@media (min-width: $tablet-width) {
+  .social__list {
+    margin: 0;
+    padding-left: 18px;
+  }
+
+  .social__item {
+    margin: 0;
+  }
+
+  .social__link {
+    padding: 0;
+  }
+
+  .social__icon {
+    display: none;
+
+    &--tablet {
+      display: block;
+    }
+  }
 }
