--- a/source/sass/blocks/_toggle.scss
+++ b/source/sass/blocks/_toggle.scss
@@ -34,3 +34,76 @@
   background-color: #68b738;
   border-radius: 10px;
 }
+
+@media (min-width: $tablet-width) {
+  .toggle {
+    width: 569px;
+  }
+
+  .toggle__wrapper {
+    border: none;
+    background: $background-togle-gray;
+    width: 100%;
+    padding: 0;
+    height: 6px;
+    margin: 0 22px 0 24px;
+    position: relative;
+  }
+
+  .toggle__bar {
+    border: 1px solid $line-toggle-gray;
+    background: $background-white;
+    width: 34px;
+    height: 34px;
+    border-radius: 50%;
+    position: absolute;
+    left: calc(50% - 16px);
+    top: -14px;
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.15);
+
+    &::after {
+      content: "";
+      display: block;
+      position: absolute;
+      width: 8px;
+      height: 8px;
+      background: $background-element-green;
+      border-radius: 50%;
+      left: calc(50% - 4px);
+      top: calc(50% - 4px);
+    }
+
+    &:hover {
+      box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.25);
+    }
+
+    &:active {
+      box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.3), 0 0 0 2px $background-element-green;
+    }
+  }
+
+  .toggle__label {
+    font-size: 1.56em;
+    border-bottom: 1px dotted $line-toggle-gtay-2;
+    padding: 5px 0 4px;
+
+    &--after {
+      margin-right: 0;
+    }
+
+    &:hover {
+      border-bottom-style: solid;
+    }
+
+    &:active {
+      border-color: rgba(0, 0, 0, 0);
+    }
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .toggle {
+    margin: 0;
+    margin-left: auto;
+  }
+}
