--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -17,4 +17,5 @@
 @import "blocks/footer";
 @import "blocks/contacts";
 @import "blocks/social";
+@import "blocks/copyright";
 @import "blocks/catalog";
