--- a/source/sass/_variables.scss
+++ b/source/sass/_variables.scss
@@ -6,6 +6,7 @@ $background-element-green: #68b738;
 $background-lightgray: #f2f2f2;
 $background-white: #ffffff;
 $background-hover-button-gray: #ebebeb;
+$background-hover-button-gray: #ebebeb;
 $background-togle-gray: #dcdcdc;
 
 $line-menu-gray: #e6e6e6;
@@ -20,6 +21,7 @@ $text-black-tablet: #222222;
 $text-white: #ffffff;
 $text-darkbrown: #444444;
 $text-white-active: rgba(255, 255, 255, 0.3);
+$text-darkbrown-active: rgba(68, 68, 68, 0.3);
 
 $tablet-width: 768px;
 $desktop-width: 1300px;
