--- a/source/sass/blocks/_catalog.scss
+++ b/source/sass/blocks/_catalog.scss
@@ -2,7 +2,6 @@
   // width: 100%;
   padding-top: 14px;
 
-
   // временные стили
   width: 320px;
   margin: 0 auto;
@@ -57,6 +56,11 @@
   height: auto;
   max-width: 100%;
   max-height: 100%;
+
+  &--tablet,
+  &--desktop {
+    display: none;
+  }
 }
 
 .catalog__description {
@@ -66,7 +70,7 @@
 .catalog__item-title {
   @include margin-padding-reset();
   width: 100%;
-  padding-right: 20px;
+  padding-right: 42px;
   margin-bottom: 10px;
 }
 
@@ -150,4 +154,176 @@
 
 .catalog__button-more {
   width: 100%;
+}
+
+@media (min-width: $tablet-width) {
+  .catalog {
+    width: $tablet-width;
+    padding: 0 30px;
+    padding-top: 30px;
+    margin-bottom: 26px;
+  }
+
+  .catalog__title {
+    padding: 0;
+    margin-bottom: 165px;
+
+    font-size: 60px;
+  }
+
+  .catalog__list {
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin: 0 -30px;
+    margin-top: -140px;
+
+    border-top: 0;
+  }
+
+  .catalog__item {
+    width: calc(50% - 60px);
+    margin: 0 30px;
+    margin-top: 140px;
+
+    padding: 0;
+    padding-bottom: 40px;
+
+    flex-direction: column;
+
+    background-color: $background-lightgray;
+    border-bottom: 0;
+  }
+
+  .catalog__item--more {
+    flex-direction: column;
+    justify-content: space-between;
+
+    background-color: $background-white;
+    border: 1px solid $line-menu-gray;
+  }
+
+  .catalog__link {
+    display: block;
+    width: 100%;
+    height: 126px;
+    position: relative;
+    margin-bottom: 38px;
+  }
+
+  .catalog__image {
+    display: none;
+    max-height: 210px;
+    position: absolute;
+    left: 50%;
+    bottom: 0;
+
+    transform: translateX(-50%);
+
+    &--tablet {
+      display: block;
+    }
+  }
+
+  .catalog__description {
+    width: 100%;
+    padding: 0 36px;
+    margin-bottom: 33px;
+  }
+
+  .catalog__item-title {
+    padding-right: 0;
+    margin: 0 auto;
+    margin-bottom: 18px;
+    max-width: 160px;
+  }
+
+  .catalog__item-link {
+    font-size: 20px;
+    line-height: 20px;
+    text-align: center;
+  }
+
+  .catalog__properties {
+    width: 100%;
+    border-collapse: collapse;
+    border-spacing: 0;
+  }
+
+  .catalog__properties td {
+    font-size: 16px;
+    padding-top: 8px;
+    padding-bottom: 7px;
+    border-bottom: 1px solid $line-toggle-gray;
+  }
+
+  .catalog__properties-name {
+    padding-right: 8px;
+  }
+
+  .catalog__properties-value {
+    padding-left: 8px;
+  }
+
+  .catalog__order-link,
+  .catalog__button-more {
+    width: 100%;
+    max-width: 250px;
+    margin: 0 auto;
+    padding-top: 10px;
+  }
+
+  .catalog__icon-plus {
+    width: auto;
+    height: 60px;
+    position: absolute;
+    bottom: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+
+  .catalog__item-title--more {
+    margin-bottom: 22px;
+  }
+
+  .catalog__text-more {
+    margin-bottom: auto;
+
+    font-size: 16px;
+    line-height: 1.3;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .catalog {
+    width: $desktop-width;
+    padding: 0 40px;
+    padding-top: 48px;
+    margin-bottom: 26px;
+  }
+
+  .catalog__title {
+    margin-bottom: 165px;
+  }
+
+  .catalog__list {
+    margin: 0 -40px;
+    margin-top: -142px;
+  }
+
+  .catalog__item {
+    width: calc(25% - 80px);
+    margin: 0 40px;
+    margin-top: 142px;
+
+    padding: 0;
+    padding-bottom: 40px;
+  }
+
+  .catalog__link {
+    margin-bottom: 37px;
+  }
+
+  .catalog__order-link {
+    max-width: 170px;
+  }
 }
