--- a/source/sass/blocks/_footer.scss
+++ b/source/sass/blocks/_footer.scss
@@ -77,7 +77,7 @@
   }
 }
 
-@media (min-width: $tablet-width) {
+@media (min-width: $desktop-width) {
   .footer__wrapper {
     width: $desktop-width;
     padding: 46px 40px;
