--- a/source/sass/blocks/_main-nav.scss
+++ b/source/sass/blocks/_main-nav.scss
@@ -83,7 +83,6 @@
   }
 }
 
-
 @media (min-width: $tablet-width) {
   .main-nav {
     justify-content: flex-end;
@@ -134,6 +133,10 @@
     width: 570px;
     max-width: inherit;
     padding: 13px 0;
+  }
+
+  .main-nav__link {
+    letter-spacing: 1px;
   }
 
   .main-nav__list--page-main .main-nav__link {
