form and red blocks ready

--- a/source/sass/_variables.scss
+++ b/source/sass/_variables.scss
@@ -6,15 +6,17 @@ $background-element-green: #68b738;
 $background-lightgray: #f2f2f2;
 $background-white: #ffffff;
 $background-hover-button-gray: #ebebeb;
-$background-hover-button-gray: #ebebeb;
 $background-togle-gray: #dcdcdc;
 
 $line-menu-gray: #e6e6e6;
 $line-dark-gray: #d9d9d9;
 $line-example-gray: #cfcfcf;
 $line-toggle-gray: #cdcdcd;
-$line-toggle-gtay-2: #bababa;
+$line-gray: #cdcdcd;
+$line-toggle-gray-2: #bababa;
 $line-catalog-gray: #ededed;
+$line-input-gray: #b9b9b9;
+$line-darkbrown: #444444;
 
 $text-black: #111111;
 $text-black-tablet: #222222;
@@ -22,6 +24,8 @@ $text-white: #ffffff;
 $text-darkbrown: #444444;
 $text-white-active: rgba(255, 255, 255, 0.3);
 $text-darkbrown-active: rgba(68, 68, 68, 0.3);
+
+$error-red: #ff8282;
 
 $tablet-width: 768px;
 $desktop-width: 1300px;
