--- a/source/sass/blocks/_toggle.scss
+++ b/source/sass/blocks/_toggle.scss
@@ -1,4 +1,3 @@
-
 .toggle {
   display: flex;
   justify-content: center;
@@ -78,13 +77,14 @@
     }
 
     &:active {
-      box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.3), 0 0 0 2px $background-element-green;
+      box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.3),
+        0 0 0 2px $background-element-green;
     }
   }
 
   .toggle__label {
     font-size: 1.56em;
-    border-bottom: 1px dotted $line-toggle-gtay-2;
+    border-bottom: 1px dotted $line-toggle-gray-2;
     padding: 5px 0 4px;
 
     &--after {
