--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -19,3 +19,7 @@
 @import "blocks/social";
 @import "blocks/copyright";
 @import "blocks/catalog";
+@import "blocks/additional";
+@import "blocks/title-lines";
+@import "blocks/select-program";
+@import "blocks/form-program";
