--- a/source/sass/blocks/_additional.scss
+++ b/source/sass/blocks/_additional.scss
@@ -63,9 +63,9 @@
 }
 
 .additional__order {
-  margin-top: 10px;
-  margin-bottom: 2px;
-  padding: 11px 0;
+  margin-top: 12px;
+  margin-bottom: 4px;
+  padding: 10px 0;
   font-size: 16px;
   line-height: 20px;
 }
@@ -107,7 +107,7 @@
 
   .additional__title {
     padding: 34px 37px;
-    margin: 0 0 44px 0;
+    margin: 0 0 47px 0;
 
     font-size: 36px;
     line-height: 36px;
@@ -117,9 +117,9 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    align-items: baseline;
+    align-items: center;
 
-    padding: 37px 25px;
+    padding: 25px 37px;
     padding-top: 12px;
 
     border: 1px solid $line-dark-gray;
@@ -143,6 +143,10 @@
     font-size: 16px;
     line-height: 20px;
 
+    td {
+      padding: 12px 0;
+    }
+
     td:nth-child(1) {
       text-align: right;
     }
@@ -154,7 +158,8 @@
 
   .additional__order {
     width: 100%;
-    margin-top: 14px;
+    margin-top: 11px;
+    padding: 10px 0;
   }
 
   .additional__action {
@@ -198,6 +203,7 @@
     flex-grow: 5;
     width: 100%;
     padding: 0 0 34px 0;
+    margin-bottom: 46px;
   }
 
   .additional__list {
@@ -221,7 +227,7 @@
   .additional__item-title {
     flex-basis: auto;
     width: 287px;
-    margin: 2px 0 0 0;
+    margin: 0;
   }
 
   .additional__properties {
@@ -241,6 +247,7 @@
   .additional__order {
     display: block;
     padding: 11px 0;
+    padding-bottom: 9px;
     width: 245px;
     margin-left: 0;
     margin-top: 4px;
@@ -266,5 +273,6 @@
     height: 102px;
     text-align: center;
     padding-right: 0;
+    margin: 0;
   }
 }
