--- a/source/sass/blocks/_example.scss
+++ b/source/sass/blocks/_example.scss
@@ -145,7 +145,6 @@
   width: 100%;
 }
 
-
 @media (min-width: $tablet-width) {
   .example {
     position: relative;
@@ -162,7 +161,13 @@
     width: 100%;
     height: 463px;
 
-    background: linear-gradient(to right, #f2f2f2 0%, #f2f2f2 50%, #eaeaea 50%, #eaeaea 100%);
+    background: linear-gradient(
+      to right,
+      #f2f2f2 0%,
+      #f2f2f2 50%,
+      #eaeaea 50%,
+      #eaeaea 100%
+    );
   }
 
   .example__container {
@@ -234,7 +239,6 @@
 
     transform: translate(-50%, 45%);
   }
-
 
   .example__price {
     margin-top: -10px;
@@ -319,7 +323,7 @@
 
 @media (min-width: $desktop-width) {
   .example {
-    padding-bottom: 40px;
+    padding-bottom: 70px;
   }
 
   .example::after {
@@ -335,7 +339,7 @@
 
   .example__title {
     width: 100%;
-    margin-bottom: 148px;
+    margin-bottom: 142px;
   }
 
   .example__wrapper {
@@ -358,8 +362,8 @@
   }
 
   .example__description {
-    margin-bottom: 65px;
-    padding-right: 20px;
+    margin-bottom: 62px;
+    padding-right: 50px;
   }
 
   .example__info-label {
@@ -371,7 +375,7 @@
   }
 
   .example__info-list {
-    margin-bottom: 52px;
+    margin-bottom: 53px;
   }
 
   .example__price {
