--- a/source/sass/blocks/_example.scss
+++ b/source/sass/blocks/_example.scss
@@ -161,13 +161,7 @@
     width: 100%;
     height: 463px;
 
-    background: linear-gradient(
-      to right,
-      #f2f2f2 0%,
-      #f2f2f2 50%,
-      #eaeaea 50%,
-      #eaeaea 100%
-    );
+    background: linear-gradient(to right, #f2f2f2 0%, #f2f2f2 50%, #eaeaea 50%, #eaeaea 100%);
   }
 
   .example__container {
