--- a/source/sass/blocks/_additional.scss
+++ b/source/sass/blocks/_additional.scss
@@ -80,7 +80,7 @@
 
   background: $background-element-green url("../img/gift-photo-mobile@1x.jpg")
     no-repeat;
-  background-size: 100%;
+  background-size: cover;
 
   @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
     background-image: url("../img/gift-photo-mobile@2x.jpg");
@@ -99,7 +99,7 @@
 .additional__action-icon {
   width: 55px;
   height: 188px;
-  background: url("../img/icon-gift.svg") no-repeat center;
+  background: url("../img/svg-sprite/icon-gift.svg") no-repeat center;
 }
 
 @media (min-width: $tablet-width) {
@@ -182,7 +182,7 @@
 
   .additional__action-icon {
     width: 56px;
-    background: url("../img/icon-gift.svg") no-repeat 0 59px;
+    background: url("../img/svg-sprite/icon-gift.svg") no-repeat 0 59px;
   }
 
   .additional__text {
@@ -269,6 +269,7 @@
     padding: 0 91px;
 
     background-image: url("../img/gift-photo-desktop@1x.jpg");
+    background-size: cover;
 
     @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
       background-image: url("../img/gift-photo-desktop@2x.jpg");
@@ -277,7 +278,7 @@
 
   .additional__action-icon {
     width: 56px;
-    background: url("../img/icon-gift.svg") no-repeat 0 65px;
+    background: url("../img/svg-sprite/icon-gift.svg") no-repeat 0 65px;
   }
 
   .additional__text {
