Map ready and button order

--- a/source/sass/blocks/_advantages.scss
+++ b/source/sass/blocks/_advantages.scss
@@ -43,7 +43,7 @@
   background-color: $background-green;
   background-repeat: no-repeat;
   background-position: center;
-  background-size: auto auto;
+  background-size: 50px auto;
 }
 
 .advantages__icon--leaf {
