--- a/source/sass/blocks/_categories.scss
+++ b/source/sass/blocks/_categories.scss
@@ -80,7 +80,7 @@
 
 .categories__description {
   @include margin-padding-reset();
-  widht: 100%;
+  width: 100%;
   margin-bottom: 24px;
 
   font-family: "Arial", "Helvetica", sans-serif;
@@ -112,7 +112,7 @@
   &:hover .categories__link-icon,
   &:focus .categories__link-icon {
     width: 33px;
-    background-image: url("../img/icon-right-arrow-verylong.svg") no-repeat
+    background: url("../img/svg-sprite/icon-right-arrow-verylong.svg") no-repeat
       center;
   }
 
@@ -122,7 +122,7 @@
 
   &:active .categories__link-icon {
     width: 33px;
-    background-image: url("../img/icon-right-arrow-verylong.svg") no-repeat
+    background: url("../img/svg-sprite/icon-right-arrow-verylong.svg") no-repeat
       center;
   }
 }
@@ -142,7 +142,8 @@
   height: 11px;
   flex-shrink: 0;
 
-  background: url("../img/icon-right-arrow-long.svg") no-repeat center;
+  background: url("../img/svg-sprite/icon-right-arrow-long.svg") no-repeat
+    center;
 }
 
 @media (min-width: $tablet-width) {
